# ai-labeler

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml  requirements.txt  sample-workflow.yml
.github/: ai-labeler.yml
.github/workflows/: ai-labeler.yml  run-tests.yaml  run-tests.yml
src/ai_labeler/: __init__.py  ai.py  config_parser.py  github.py  label_workflow.py  main.py
tests/: conftest.py  test_ai.py  test_github.py  test_main.py
