[project]
name = "ai-labeler"
version = "0.3.0"
description = "GitHub Action that uses LLMs to label issues and PRs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["controlflow>=0.11.1", "pygithub>=2.4.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "copychat>=0.1.0",
    "pyyaml>=6.0.1",          # For YAML config testing
    "pytest-xdist>=3.2.1",    # For parallel testing
]

[tool.hatch.build]
packages = ["src/ai_labeler"]
